Some Views and Controllers

--- a/Marauder's_Oasis/Views/Home/Index.cshtml
+++ b/Marauder's_Oasis/Views/Home/Index.cshtml
@@ -14,26 +14,18 @@
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body" style="background-color : darkslategray">
-						<h5 class="card-title">Find a service</h5>
+						<h5 class="card-title">Search Service Offers</h5>
 						<p class="card-text">Find the service you need and contact the provider.</p>
-						<a href="~/Services/Index" class="btn btn-primary">Find a service</a>
+						<a href="~/Service/All" class="btn btn-primary">Find a service</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body" style="background-color : darkslategray">
-						<h5 class="card-title">Offer a service</h5>
-						<p class="card-text">Offer your services to the community.</p>
+						<h5 class="card-title">Offer your Service</h5>
+						<p class="card-text">Put your profesionalism to work!</p>
 						<a href="~/Services/Create" class="btn btn-primary">Offer a service</a>
-
-						<style>
-							.btn-primary {
-								background-color: #4CAF50 !important; /* Green */
-								border-color: #4CAF50 !important; /* Green */
-							}
-						</style>
-
 					</div>
 				</div>
 			</div>
@@ -42,7 +34,8 @@
 					<div class="card-body" style="background-color : darkslategray">
 						<h5 class="card-title">Contact us</h5>
 						<p class="card-text">Contact us for any questions or suggestions.</p>
-						<a href="~/Home/Contact" class="btn btn-primary">Contact us</a>
+						<a href="~/Home/Contact" class="btn btn-primary">Send us a Message</a>
+						<button type="button" class="btn btn-primary" onclick="location.href='/Home/Anonymous'">Send Anonymously</button>
 					</div>
 				</div>
 			</div>
