--- a/Marauder's_Oasis/Views/Shared/_Layout.cshtml
+++ b/Marauder's_Oasis/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 					</ul>
+					<div id="clock"></div>
 					<partial name="_LoginPartial" />
 				</div>
 			</div>
@@ -46,5 +47,12 @@
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
+
+
+	<script>
+		setInterval(() => {
+			document.getElementById('clock').innerText = new Date().toLocaleTimeString();
+		}, 1000);
+	</script>
 </body>
 </html>
