--- a/Marauder's_Oasis/Views/Shared/_LoginPartial.cshtml
+++ b/Marauder's_Oasis/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,19 @@
 ﻿@using Marauders_Oasis.Data.Models.Models;
 @using Microsoft.AspNetCore.Identity
+@using static Marauders_Oasis.Common.SalutionMethods
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
+
 
 <ul class="navbar-nav">
 	@if (SignInManager.IsSignedIn(User))
 	{
+		@*<li class="nav-item">
+			<a class="nav-link text-white" asp-area="" asp-controller="Contractor" asp-action="Join">Become a Contractor today!</a>
+		</li>*@
 		<li class="nav-item">
-			<a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+			<a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @GetNameFromEmail(User.Identity?.Name)!</a>
 		</li>
 		<li class="nav-item">
 			<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
